assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;1,400&display=swap');


/* --------------COLORS----------------- */

body {
    background-color: #dbd1cf;
}
header {
    background-color: #4B3B40;
    color: #dbd1cf;
}

footer {
    background-color: #4B3B40;
    color: #dbd1cf;
}

.figure-caption {
    color: #858179;
}

a {
    color: white;
}

a:hover {
    color: #E086D3;
}

nav a {
    color: #dbd1cf;
}

nav a:hover {
    color: #E086D3;
}

.vendors a {
    color: #4B3B40;
}

.vendors a:hover {
    color: #E086D3;
}

/* ------Special Paddings/margin/text------- */

body {
    width: 100%;
    font-family: 'Montserrat', sans-serif;
}

h1,h2,h3,h4 {
    margin: 0;
}

.uppercase {
    text-transform: uppercase;
}

/* --------------HEADING----------------- */

header {
    width: 100%;
    margin: 0;
    font-family: 'Montserrat', sans-serif;
    padding-top: 20px; 
    
}

header .row {
    max-width: 100%;
   
}

.title {
    padding: 5;
}

header h1 {
    font-size: 60px;
    border-bottom: 5px solid #dbd1cf;
}

.logo  {
    background: url("../img/logo-main.png");
    min-height: 210px;
    min-width: 200px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: inherit;
    margin-bottom: 20px;
    padding-left: 20px;
    margin-left: 0px;
}

.title h1 {
    margin-right: inherit;
}

.title h2 {
    font-style: italic;
}

figcaption {
    text-align: center;
}

nav li {
    list-style: none;
    text-align: center;
    font-size: 28px;
    margin-top: 20px;
    margin-bottom: 20px;
    height: 60px;
}

nav a {
    text-decoration: none;
    display: block;
}

nav a:hover {
    text-decoration: none;
}

/* --------------PAGE BODY----------------- */

h2 {
    font-weight: 600;
    font-size: 40px;
    text-align: center;
    margin-top: 50px;
    margin-bottom: 50px;
}

header h2 {
    margin: 0;
    text-align: left;
    font-size: 40px;
    font-weight: 400;
}

h2 {
    width: 100%;
}

p {
    width: 100%;
}

.instructions {
    font-family: 'Montserrat', sans-serif;
}

.instructions-imgs {
    max-height: 300px;
    background-position: center;
    background-repeat: no-repeat;
}

.vendors ul {
    list-style: none;
    text-align: center;
}

.vendors li {
    margin-top: 5px;
    margin-bottom: 5px;
}

.vendors a:hover {
    text-decoration: none;
}

.health-benefits ul {
    width: 100%;
    list-style: none;
}

.source-credit {
    width: 100%;
}

#equipmentforcoffee {
    width: 80%;
}

/* --------------FOOTER----------------- */

footer {
    width: 100%;
    text-align: center;
    margin-top: 10px;
    padding-bottom: 50px;
    padding-top: 10px;
    min-height: 100px;
}

footer .list-inline-item {
    margin-top: 30px;
}

/* --------------BREAKPOINTS----------------- */

@media screen and (max-width: 1396px){
    .logo {
        width: 100%;
        clear: both;
        float: right;
        margin-left: auto;
        margin-right: auto;
    }
    .title {
        width: 90%;
        text-align: center;
        margin-left: auto;
        margin-right: auto;
    }
    .title h2 {
        text-align: center;
    }

    .container {
        width: 90%;
        padding: 20px;
        margin-left: auto;
        margin-right: auto;
        font-size: 1.2rem;
    }

    .row {
        width: 90%;
        margin-left: auto;
        margin-right: auto;
    }

    #information-page-body h3  {
        font-weight: 600;
        font-size: 2rem;
        width: 90%;
        text-align: center;
        margin-left: auto;
        margin-right: auto;
    } 
    
    #information-page-body h4 {
        font-weight: 600;
        font-size: 1.5rem;
        width: 90%;
        text-align: center;
        margin-left: auto;
        margin-right: auto;
    }

    #information-page-body p {
        max-width: 100%;
        min-width: 100%;
        text-align: center;
        font-size: 150%;
    }

    .media {
        max-width: 100%;
        min-width: 100%;
        clear: both;
        float: none;
        display: block;
    }

    .media-body {
        text-align: center;
        max-width: 100%;
        min-width: 100%;
        clear: both;
        float: left;
    }
    .figure {
        max-width: 100%;
        min-width: 100%;
        float: none;
        clear: both;
        text-align: center;
    }

    .image-right-side {
        display: none;
    }

    .figure-img {
        min-width: 300px;
        max-height: 500px;
    }

    footer h5{
        font-size: 1.5rem;
    }

}

@media screen and (max-width: 943px){
    nav ul {
        width: 100%;
        padding-left: 0;
    }

    nav ul li {
        height: 150%;
        clear: both;
        width: 100%;
        max-width: 100%;
        min-width: 100%;
        margin-left: auto;
        margin-right: auto;
        padding-left: 10px;
        
    }
    nav a {
        margin-left: 25%;
        margin-right: 25%;
    }

    .vendors {
        max-width: 100%;
        min-width: 100%;
        clear: both;
        float: left;
    }
}

